# cloud_sql_instance_manager

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  ReadMe.md  cloudsqlproxy.py  commandline.py  gcp.py  instances.py  main.py  persistence.py  pyproject.toml  requirements.txt  running_instances.py  setup.cfg  testing.py
.github/workflows/: main-pull-request.yml  main.yml  test.yml
cloud_sql/: __init__.py  cloud_sql.py  cloud_sql_proxy.py  cloudsqlproxy.py  commandline.py  config.py  gcp.py  instance_manager.py  instances.py  persistence.py  running_instances.py
tests/: test_cloud_sql_proxy.py  test_commandline.py  test_config.py  test_fixtures.py  test_gcp.py  test_instance_manager.py  test_instances.py  test_persistence.py  test_running_instances.py
