[metadata]
name = cloud_sql_instance_manager
version = 0.2.0
author = Zoë Mackay
author_email = zoe.mackay@ovo.com
description = Manages cloud_sql_proxy connections, allocating fixed ports and allowing control over starting and stopping
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zoe-j-m/cloud_sql_instance_manager
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    jsonpickle
    psutil
    google-api-python-client
    argparse
[options.entry_points]
console_scripts =
    cloud_sql = cloud_sql:cloud_sql